# biomedical-kg-target-prioritization

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  LICENSE-figures  Makefile  NOTICE  README.md  SECURITY.md  dvc.yaml  index.html  mkdocs.yml  params.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
adr/0001-disease-anchor-efo0004616/: index.html
adr/0002-six-sources-exclude-disgenet/: index.html
adr/0003-ensembl-hub-crosswalk/: index.html
adr/0004-ogb-style-evaluation/: index.html
caveats/: index.html
configs/: config.yaml  sample-gnn.yaml  sources.yaml
data/: README.md
data-sources/: index.html
data/sample/: disease_gene.parquet  drug_gene.parquet  gene_gene.parquet  gene_go.parquet  gene_pathway.parquet  manifest.json  nodes.parquet  pathway_pathway.parquet
docker/: Dockerfile  docker-compose.yml
docs/: api-safety.md  audit-current-state.md  biomedical-limitations.md  caveats.md  data-sources.md  dataset-card-sample.md  dataset-card.md  evaluation-protocol.md  explainability-and-api.md  final-validation-report.md  gnn-evaluation-protocol.md  index.md  kg-schema.md  leakage-prevention.md  model-card.md  negative-sampling-and-baselines.md  oa-biology.md  refactor-roadmap.md  reproducibility.md  security-exceptions.md  split-protocol.md
docs/adr/: 0001-disease-anchor-efo0004616.md  0002-six-sources-exclude-disgenet.md  0003-ensembl-hub-crosswalk.md  0004-ogb-style-evaluation.md
kg-schema/: index.html
oa-biology/: index.html
scripts/: check_coverage.py  refresh_sample_dataset.py
search/: search_index.json
src/kgtp/: __init__.py  artifacts.py  cli.py  config.py  logging.py  run_manifest.py  seeds.py  smoke.py
tests/: conftest.py
tests/integration/: test_api_safety.py  test_sample_pipeline.py
tests/unit/: test_ablation.py  test_api.py  test_baselines.py  test_crosswalk.py  test_eval_metrics.py  test_explain.py  test_graph_statistics.py  test_leakage_prevention.py  test_models.py  test_quality_gates.py  (+2 more)
(+64 files in other folders)
