[project]
name = "biomedical-kg-target-prioritization"
version = "0.2.0"
description = "OA-centric heterogeneous knowledge graph target-prioritization benchmark."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "lysyloxidase" }]
dependencies = [
  "captum>=0.9.0",
  "fastapi>=0.136.3",
  "matplotlib>=3.10.9",
  "neo4j>=5.28",
  "networkx>=3.3",
  "numpy>=2",
  "pandas>=2.2",
  "pyarrow>=17",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pyyaml>=6",
  "requests>=2.32",
  "structlog>=24.4",
  "torch>=2.4",
  "torch-geometric>=2.6",
  "typer>=0.15",
  "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8",
  "mypy>=1.14",
  "pandas-stubs>=2.2",
  "pip-audit>=2.9",
  "pyright>=1.1",
  "pytest>=8.3",
  "pytest-cov>=6",
  "ruff>=0.8",
  "types-PyYAML>=6",
  "types-requests>=2.32",
]

[project.scripts]
kgtp = "kgtp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kgtp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["kgtp"]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "neo4j",
  "networkx",
  "numpy",
  "pandas",
  "requests",
  "torch",
  "torch_geometric.*",
  "structlog",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/kgtp"]
omit = [
  "src/kgtp/cli.py",
  "src/kgtp/data/chembl.py",
  "src/kgtp/data/gene_ontology.py",
  "src/kgtp/data/opentargets.py",
  "src/kgtp/data/reactome.py",
  "src/kgtp/data/string_ppi.py",
  "src/kgtp/data/uniprot.py",
  "src/kgtp/kg/neo4j_loader.py",
  "src/kgtp/logging.py",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mkdocs-material>=9.7.6",
    "pre-commit>=4.6.0",
]
